samples/_failures_safe/1761520068_276951_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d384c18f.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_d384c18f.c:150:13: error: expected expression at end of input
  150 |             if (graph->edges[i].src ==
      |             ^~
./samples/SAFE/__tmp_d384c18f.c:150:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d384c18f.c:150:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d384c18f.c:150:13: error: expected declaration or statement at end of input
